# eiq-example

./: download_models.py
dms/: dms.py  face_detection.py  main.py
minimal/: 1-Normal.cc  2-CloseEye.cc  3-Yawning.cc  4-YawningCloseEye.cc  5-FaceDown.cc  CMakeLists.txt  InputFiles.cc  InputFiles.hpp  dms.cc  dms_shm.cc  dms_shm_trigger.cc  grace_hopper.cc  imshow.cc  make.sh  run_dms_shm.sh
minimal/py/: gen.sh  gen_rgb_bin.py  gen_rgb_cpp.py
minimal/py/templates/: Images.cc.template  Images.hpp.template  image.cc.template
opencv_minimal/: CMakeLists.txt  cam.sh  minimal.cc  rtps.cc
